--- a/assets/css/atlantis.css
+++ b/assets/css/atlantis.css
@@ -9022,3 +9022,9 @@ body {
       white-space: nowrap; }
   
 /*# sourceMappingURL=atlantis.css.map */
+.logo-header .logo .navbar-brand {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-right: 0px;
+  height: 35px;
+}
